TestCases/Errors/range_value/observations/sum_10_obs.spm
 obs   4-13   0.00285714285714286 
 obs   5-13   0.001 
 obs   5-14   0.000666666666666667 
 obs   6-14   0.001 
 obs   7-16   0.0231578947368421 
 obs   7-17   0.0202894736842105 
 obs   8-17   0.0184210526315789 
 obs   9-17   0.00210526315789474 
 obs   8-18   0.00678365072224721 
 obs   9-18   0.00941259443024526 
 obs   9-19   0.00792982456140351 
 error_value   4-13   0 
 error_value   5-13   0 
 error_value   5-14   0 
 error_value   6-14   0 
 error_value   7-16   0 
 error_value   7-17   0 
 error_value   8-17   0 
 error_value   9-17   0 
 error_value   8-18   0 
 error_value   9-18   0 
 error_value   9-19   0 
